--- a/FinalSet/Webpage/css/custom.css
+++ b/FinalSet/Webpage/css/custom.css
@@ -17,6 +17,19 @@
 	font-weight: bold;
 }
 
+#autoSuggestDiv {
+	width: auto;
+	height: auto;
+	background-color: #fff;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 50;
+	box-shadow: 2px 2px 2px #000;
+	padding-top: 2px;
+	padding-bottom: 2px;
+}
+
 .container .row {
 	width: 75%;
 	margin-left: auto;
