--- a/FinalSet/Webpage/css/custom.css
+++ b/FinalSet/Webpage/css/custom.css
@@ -1,5 +1,5 @@
 .custom-search {
-	margin-top: 20px;
+	margin-top: 0px;
 }
 
 h2 {
@@ -14,6 +14,30 @@ hr {
 	margin: 0px;
 }
 
+vr {
+    height: 40px;
+	background-color: #ACACAC;
+	width: 1px;
+	float: left;
+	position: relative;
+	margin: -2% 30px 0px 30px;
+}
+
+.search-option {
+	float: left;
+}
+
+.search-option label {
+	color: #A8A8A8;
+}
+
+.search-option select {
+	border-radius: 13px;
+	padding: 5px;
+	padding-right: 5px;
+	outline: 0;
+}
+
 .navbar {
 	position: relative;
 	width: 100%;
@@ -25,13 +49,23 @@ hr {
 }
 
 .navbar .container {
-	margin-top: 15px;
+	margin-top: 20px;
 }
 
-.navbar-header .navbar-brand {
-	padding-top: 25px;
+.navbar .container .navbar-header {
+	margin-bottom: 15px;
+}
+
+.navbar .container .navbar-header .navbar-brand {
+	padding: 5px 5px 5px 0px;
 	font-size: 28px;
 	color: #2EBB2E;
+	margin: 0px;
+	height: auto;
+}
+
+.navbar-collapse {
+	float: left;
 }
 
 .search-button {
@@ -58,6 +92,6 @@ hr {
 
 .container .row {
 	width: 78%;
-	margin-left: auto;
+	margin-left: 0;
 	margin-right: auto;
 }
