--- a/FinalSet/Webpage/css/custom.css
+++ b/FinalSet/Webpage/css/custom.css
@@ -31,11 +31,18 @@ vr {
 	color: #A8A8A8;
 }
 
+select:-moz-focusring {
+    color: transparent;
+    text-shadow: 0 0 0 #000;
+}
+
 .search-option select {
 	background-color: #ccc;
 	padding: 5px;
 	padding-right: 5px;
 	outline: 0;
+	border: none;
+	outline-style: none;
 }
 
 .navbar {
@@ -66,6 +73,8 @@ vr {
 
 .navbar-collapse {
 	float: left;
+	clear: left;
+	width: 100%;
 }
 
 .search-button {
